--- a/Czech/main/AuthManager.apk/res/values-cs/strings.xml
+++ b/Czech/main/AuthManager.apk/res/values-cs/strings.xml
@@ -299,5 +299,27 @@
   <string name="HIPS_Perm_UDevice_ID">Sdílet část informací o vašem zařízení s vývojáři her pro jejich lepší optimalizaci. Souhlasíte?</string>
   <string name="HIPS_Perm_UDevice_ID_DESC">Sdílet část informací o vašem zařízení s vývojáři her pro jejich lepší optimalizaci. Souhlasíte?</string>
 <string name="HIPS_Perm_deamon_notification">permanentní upozornění</string>
-  <string name="HIPS_Perm_deamon_notification_Desc">zobrazit permanentní upozornění</string>  
+  <string name="HIPS_Perm_deamon_notification_Desc">zobrazit permanentní upozornění</string>
+  <string name="background_location_access_reminder_notification_content">Tato aplikace má vždy přístup k vaší poloze. Změníte dotykem..</string>
+  <string name="background_location_access_reminder_notification_title">%s používala vaši polohu</string>
+  <string name="grant_dialog_button_allow_always">Vždy povolit</string>
+  <string name="grant_dialog_button_allow_background">Vždy povolit</string>
+  <string name="grant_dialog_button_allow_foreground">Povolit pouze pokud se apl. používá</string>
+  <string name="grant_dialog_button_deny_and_dont_ask_again">Zakázat a neptat se</string>
+  <string name="grant_dialog_button_deny_background">Ponechat přístup během používání</string>
+  <string name="grant_dialog_button_deny_background_and_dont_ask_again">Ponechat a neptat se</string>
+  <string name="permgrouprequest_storage_isolated">Povolit %1$s přístup k fotografiím a médiím v zařízení?</string>
+  <string name="permission_description_summary_activity_recognition">Aplikace s tímto povolením může přistupovat k vaší fyzické aktivitě jako chůze, běh, počet kroků atd.</string>
+  <string name="permission_description_summary_calendar">Aplikace s tímto povolením může přistupovat k vašemu kalendáři</string>
+  <string name="permission_description_summary_call_log">Aplikace s tímto povolením může upravovat historii hovorů</string>
+  <string name="permission_description_summary_camera">Aplikace s tímto povolením může zhotovit fotografii nebo video</string>
+  <string name="permission_description_summary_contacts">Aplikace s tímto povolením může číst vaše kontakty</string>
+  <string name="permission_description_summary_generic">Aplikace s tímto povolením může %1$s</string>
+  <string name="permission_description_summary_location">Aplikace s tímto povolením může přistupovat k vaší poloze</string>
+  <string name="permission_description_summary_microphone">Aplikace s tímto povolením může nahrávat zvuk</string>
+  <string name="permission_description_summary_phone">Aplikace s tímto povolením může uskutečnit hovor</string>
+  <string name="permission_description_summary_sensors">Aplikace s tímto povolením může přistupovat k údajům o vaší aktivitě</string>
+  <string name="permission_description_summary_sms">Aplikace s tímto povolením může odeslat SMS</string>
+  <string name="permission_description_summary_storage">Aplikace s tímto povolením může přistupovat k vašim fotografiím a médiím v zařízení</string>
+  <string name="permission_reminders">Upozornění na povolení</string>  
 </resources>
