--- a/Czech/main/PersonalAssistant.apk/res/values-cs/strings.xml
+++ b/Czech/main/PersonalAssistant.apk/res/values-cs/strings.xml
@@ -514,4 +514,13 @@
   <string name="system_favorite_dialog_title_confirm">Vyžaduje povolení</string>  
   <string name="just_now">Právě nyní</string>
   <string name="time_just_now">Právě nyní</string>
+  <string name="card_menu_remove">Odebrat</string>
+   <String name="preference_privacy_settings">Nastavení soukromí</string>
+   <String name="setting_cancel_sticky">Odebrat</string>
+   <String name="setting_sticky">Přípnout</string>
+   <String name="setting_sticky_canceled">Odebrané</string>
+   <String name="setting_sticky_done">Připnuté</string>
+   <String name="steps">kroků</string>
+   <String name="sport_headline">Dnešní aktivita</string>
+   <String name="timeline_headline">Nadcházející</string>
 </resources>
